# whatsapp-chat-parser

./: .gitignore  LICENSE  README.md  whatsapp-chat-parser.cabal
app/: Main.hs
db2latex/: db2latex.py
db2pdf/: OpenSansEmoji.cw127.pkl  OpenSansEmoji.pkl  db2pdf.py
src/: Chat.hs  LaTeX.hs  Parser.hs
whatsapp2db/: stack.yaml  whatsapp2db.cabal
whatsapp2db/app/: Main.hs
whatsapp2db/src/: Chat.hs  Database.hs  Parser.hs
