name:                whatsapp-chat-parser
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/kmein/whatsapp-chat-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
copyright:           Copyright (c) 2017 Kierán Meinhardt
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chat, Parser, LaTeX
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
                     , time
                     , HaTeX
  default-language:    Haskell2010

executable whatsapp-chat-parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HaTeX
                     , megaparsec
                     , text
                     , whatsapp-chat-parser
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kmein/whatsapp-chat-parser
