name:                whatsapp2db
version:             0.1.0
synopsis:            Convert WhatsApp chat logs into an Sqlite3 database
homepage:            https://github.com/kmein/whatsapp-chat-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
copyright:           Copyright (c) 2017 Kierán Meinhardt
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chat, Parser, Database
  build-depends:       base >= 4.7 && < 5
                     , HDBC
                     , HDBC-sqlite3
                     , bytestring
                     , megaparsec
                     , text
                     , time
  default-language:    Haskell2010

executable whatsapp-to-db
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , timeit
                     , whatsapp2db
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kmein/whatsapp-chat-parser
